<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="109dp"
        android:background="#009688"
        android:onClick="start"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/go"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/sum"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <Button
            android:id="@+id/button0"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="25dp"
            android:background="#009688"
            android:onClick="pick"
            android:tag="0"
            android:text="@string/c1"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="25dp"
            android:background="#009688"
            android:onClick="pick"
            android:tag="1"
            android:text="@string/c2"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="25dp"
            android:background="#009688"
            android:onClick="pick"
            android:tag="2"
            android:text="@string/c3"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="25dp"
            android:background="#009688"
            android:onClick="pick"
            android:tag="3"
            android:text="@string/c4"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />


    </android.support.v7.widget.GridLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@android:color/background_light"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="3dp"
        android:contentDescription="@string/todo" />
</android.support.constraint.ConstraintLayout>